强化学习拥塞控制算法选择码率

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,50 @@
-# 定义一个变量 MODULE，其值为 yty-system。
+# ===================================================================
+# yty-system/CMakeLists.txt (最终修正版)
+# ===================================================================
+
 set(MODULE yty-system)
 
-# 把模块里所有 .cc 源文件列出来，赋值给 SOURCE_FILES 变量。
-# 我已经为您添加了helper文件，您接下来会需要它们。
+# 2. 列出模块需要编译的源文件 (.cc) 和头文件 (.h)
 set(SOURCE_FILES
   helper/yty-camera-helper.cc
   helper/yty-server-helper.cc
   model/yty-camera.cc
   model/yty-server.cc
-  model/yty-bitrate-sampler.cc # <<< 新增
+  model/yty-bitrate-sampler.cc # <-- 我之前漏掉了这一行！现在加回来。
 )
 
-# 把所有 .h 头文件列出来，赋值给 HEADER_FILES 变量。
 set(HEADER_FILES
   helper/yty-camera-helper.h
   helper/yty-server-helper.h
   model/yty-camera.h
   model/yty-server.h
-  model/yty-bitrate-sampler.h # <<< 新增
+  model/yty-bitrate-sampler.h # <-- 对应的头文件也加上，保持规范。
 )
 
-# build_lib 是 ns-3 的自定义 CMake 宏，用于声明并构建一个模块静态/动态库。
+# 3. 查找项目依赖的外部库
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(ZMQ REQUIRED IMPORTED_TARGET libzmq)
+pkg_check_modules(NLOHMANN_JSON REQUIRED nlohmann_json)
+find_package(Threads REQUIRED)
+
+# 4. 使用 ns-3 的 "build_lib" 函数来定义模块库
 build_lib(
-  LIBNAME           ${MODULE} # 库名字
-  SOURCE_FILES      ${SOURCE_FILES} # 源文件清单
-  HEADER_FILES      ${HEADER_FILES} # 头文件清单
-  LIBRARIES_TO_LINK # 依赖的其它 ns-3 库
+  LIBNAME           ${MODULE}
+  SOURCE_FILES      ${SOURCE_FILES}
+  HEADER_FILES      ${HEADER_FILES}
+  LIBRARIES_TO_LINK
     ${libcore}
     ${libnetwork}
     ${libinternet}
     ${libapplications}
+    Threads::Threads
+    PkgConfig::ZMQ
+    ${NLOHMANN_JSON_LIBRARIES}
 )
 
-# 把model和helper也加入include的路径里，因为有些代码include可能找不到二级目录里的文件！
+# 5. 告诉编译器去哪里寻找头文件 (.h)
 target_include_directories(${MODULE} PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/model>
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/helper>
+    ${NLOHMANN_JSON_INCLUDE_DIRS}
 )
